--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ overflow: hidden;
 <img src="./Saurabh Profile_files/mXwVHOAW_400x400.jpg" alt="failed to load">
 
 <h1>Saurabh Kanawade</h1>
-<p>Reference site about my career. Giving the imformation of my background. </p>
+<p>Reference site about my career. Giving the information of my background. </p>
 
 <ul>
     <li><a href="file:///C:/Web%20Development%20(Vs%20Code)/project/profile.html"><i class="fab fa-linkedin"></i></a></li>
