--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ overflow: hidden;
 <p>Reference site about my career. Giving the information of my background. </p>
 
 <ul>
-    <li><a href="file:///C:/Web%20Development%20(Vs%20Code)/project/profile.html"><i class="fab fa-linkedin"></i></a></li>
+    <li><a href="https://www.linkedin.com/in/saurabhkanawade/"><i class="fab fa-linkedin"></i></a></li>
     <li><a href="file:///C:/Web%20Development%20(Vs%20Code)/project/profile.html"><i class="fab fa-github-square"></i></a></li>
     <li><a href="file:///C:/Web%20Development%20(Vs%20Code)/project/profile.html"><i class="fab fa-twitter-square"></i></a></li>
     <li><a href="file:///C:/Web%20Development%20(Vs%20Code)/project/profile.html"><i class="fab fa-facebook-square"></i></a></li>
