i commited here the target attribute

--- a/index.html
+++ b/index.html
@@ -140,10 +140,10 @@ overflow: hidden;
 <p>Reference site about my career. Giving the information of my background. </p>
 
 <ul>
-    <li><a href="https://www.linkedin.com/in/saurabhkanawade/"><i class="fab fa-linkedin"></i></a></li>
-    <li><a href="https://github.com/Saurabhkanawade"><i class="fab fa-github-square"></i></a></li>
-    <li><a href="https://twitter.com/saurabh30092"><i class="fab fa-twitter-square"></i></a></li>
-    <li><a href="https://www.facebook.com/saurabh.kanawade.33"><i class="fab fa-facebook-square"></i></a></li>
+    <li><a href="https://www.linkedin.com/in/saurabhkanawade/" target="blank"><i class="fab fa-linkedin"></i></a></li>
+    <li><a href="https://github.com/Saurabhkanawade" target="blank"><i class="fab fa-github-square"></i></a></li>
+    <li><a href="https://twitter.com/saurabh30092" target="blank"><i class="fab fa-twitter-square"></i></a></li>
+    <li><a href="https://www.facebook.com/saurabh.kanawade.33" target="blank"><i class="fab fa-facebook-square"></i></a></li>
 
 
 </ul>
